# Cditor

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: desktop-builds.yml
crates/app/: Cargo.toml
doc/: README.md  database-implementation-plan.md  ding-note2-ime-full-migration-analysis.md  large-document-rich-text-architecture.md  large-document-rich-text-implementation-status.md  minimal-postgres-editor.md  remote-postgres.md  v1-block-gutter-list-background-migration-plan.md  v1-editor-operations-migration-plan.md  v1-table-full-migration-plan.md  v2-rich-text-editor-gui-architecture.md  富文本编辑器架构迁移方案.md
doc/guides/: cditor-component-integration.md
doc/refactor/: module-split-plan.md  skeleton-loading-plan.md
examples/: minimal_postgres_editor.rs
src/: lib.rs  main.rs
src/api/: cditor.rs  cold_start.rs  options.rs
src/core/: mod.rs
src/editor/: debug_overlay.rs  hit_test.rs  scroll_trace_replay.rs  trace_event_log.rs
src/gui/: clipboard_assets.rs  mod.rs  rich_text.rs  theme.rs
src/runtime/: async_version_control.rs  composition.rs  demo_fixtures.rs  document_query_index.rs  document_runtime.rs  editing_acceptance.rs  editing_session.rs  input_hot_path.rs  layout_scheduler.rs  list_projection.rs  main_thread_budget.rs  media_cache.rs  mod.rs  open_acceptance.rs  paste_import_pipeline.rs  payload_window.rs  scroll_acceptance.rs  structure_edit_acceptance.rs  view_projection.rs  worker_pool_policy.rs
src/storage/: height_write_debounce.rs  layout_cache.rs  mod.rs  optimistic_persistence.rs  traits.rs
(+169 files in other folders)
