[package]
name = "CDitor-V2"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", default-features = false, features = ["font-kit"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", default-features = false, features = ["font-kit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-segmentation = "1.12"
image = "0.25.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
